--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.1.0",
     "readline-sync": "^1.4.10",
     "sequelize": "^6.33.0",
+    "sharp": "^0.32.6",
     "sqlite3": "^5.1.6",
     "symbolist": "^1.3.0",
     "ts-node": "^10.9.1",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
+    "@types/fs-extra": "^11.0.2",
     "@types/readline-sync": "^1.4.4",
     "@types/unzipper": "^0.10.7",
     "@types/uuid": "^9.0.4"
