--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "boyzone-companion",
+  "name": "winny",
   "version": "0.0.1",
   "description": "Theme Manager bot for Winston",
   "main": "main.js",
   "scripts": {
     "build": "tsc",
     "start": "ts-node ./src/main.ts",
-    "prod": "pm2 start run-ts.sh --name BoyzoneCompanion",
-    "prod-update": "pm2 delete BoyzoneCompanion && git pull && npm i && npm run prod"
+    "prod": "pm2 start run-ts.sh --name Winny",
+    "prod-update": "pm2 delete Winny && git pull && npm i && npm run prod"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "discord.js": "^14.13.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.0.2",
     "fs-extra": "^11.1.1",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.1.0",
