Update .gitignore, package.json, and add ecosystem.config.js
Updated .gitignore file to ignore new configuration and database files. Modified 'scripts' section in package.json to separate production and development environments. Added ecosystem.config.js file to provide more elaborate configuration for pm2. These changes will help in managing different environments and deployment.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "ts-node ./src/main.ts",
-    "prod": "pm2 start run-ts.sh --name Winny",
+    "prod": "pm2 start --env production",
+    "dev": "tsnd --respawn --inspect -- ./src/main.ts",
     "prod-update": "pm2 delete Winny && git pull && npm i && npm run prod"
   },
   "author": "",
