--- a/.gitignore
+++ b/.gitignore
@@ -133,3 +133,9 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+/.idea/webServers.xml
+/src/database/themes_database.sqlite
+/.idea/sshConfigs.xml
+/.idea/deployment.xml
+/channels.json
+/whitelist.json
