Update .gitignore, add S3 upload functionality, update project name in package-lock.json
Updated paths for channels.json and whitelist.json in .gitignore.

Added new functionality 'uploadToBucket' to upload a theme zip and multiple images to an S3 bucket (file: src/features/webHandler/S3Buckets/uploadToBucket.ts).

Changed project name in package-lock.json from "boyzone-companion" to "winny".

Also added dependencies for AWS S3 operations in package-lock.json.

These changes enhance the project with AWS S3 operations for theme and image upload while keeping git from tracking unnecessary files.

Furthermore, changing the project name to 'winny' better describes its nature.

--- a/.gitignore
+++ b/.gitignore
@@ -137,5 +137,5 @@ dist
 /src/database/themes_database.sqlite
 /.idea/sshConfigs.xml
 /.idea/deployment.xml
-/channels.json
-/whitelist.json
+/src/channels.json
+/src/whitelist.json
