--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Frostplexx",
   "license": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.421.0",
     "@aws-sdk/s3-request-presigner": "^3.421.0",
     "@types/multer": "^1.4.7",
     "cors": "^2.8.5",
@@ -20,6 +21,7 @@
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.2",
     "fs-extra": "^11.1.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.1.0",
     "readline-sync": "^1.4.10",
@@ -35,9 +37,11 @@
     "ws": "^8.14.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.421.0",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.18",
     "@types/fs-extra": "^11.0.2",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/readline-sync": "^1.4.4",
     "@types/unzipper": "^0.10.7",
     "@types/uuid": "^9.0.4"
