--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-rate-limit": "^7.0.2",
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.2",
+    "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
     "openai": "^3.1.0",
     "readline-sync": "^1.4.10",
