--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.421.0",
     "@aws-sdk/s3-request-presigner": "^3.421.0",
+    "@octokit/rest": "^20.0.2",
+    "@octokit/types": "^12.0.0",
     "@types/multer": "^1.4.7",
     "cors": "^2.8.5",
     "discord.js": "^14.13.0",
