--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.421.0",
     "@aws-sdk/s3-request-presigner": "^3.421.0",
+    "@linear/sdk": "^27.0.0",
     "@octokit/rest": "^20.0.2",
     "@octokit/types": "^12.0.0",
     "@types/multer": "^1.4.7",
+    "axios": "^1.7.4",
     "cors": "^2.8.5",
     "discord.js": "^14.13.0",
-   "dotenv": "^16.3.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.0.2",
     "fs-extra": "^11.1.1",
     "jsonwebtoken": "^9.0.2",
     "jszip": "^3.10.1",
     "multer": "^1.4.5-lts.1",
-    "openai": "^3.1.0",
+    "openai": "^4.55.7",
     "readline-sync": "^1.4.10",
     "sequelize": "^6.33.0",
     "sharp": "^0.32.6",
